Fix alignment bug in header

--- a/src/style.css
+++ b/src/style.css
@@ -2,6 +2,13 @@
 USDC COLOR = #2775ca
 SOL COLOR = #9945FF */
 
+* {
+  box-sizing: border-box;
+  /* https://css-tricks.com/snippets/css/system-font-stack/ below: */
+  font-family: system-ui, "Segoe UI", Roboto, Helvetica, Arial, sans-serif,
+    "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
+}
+
 body {
   display: flex;
   gap: 20px;
@@ -32,6 +39,7 @@ a:visited {
 .degods {
   fill: white;
   padding: 0 13.85px;
+  display: block;
 }
 
 .frank {
@@ -41,9 +49,10 @@ a:visited {
   gap: 7px;
 }
 
-.frank img {
+#frank-pfp {
   height: 36px;
   border-radius: 100%;
+  display: block;
 }
 
 .if-you {
